--- a/지능형SW/0613_chap1_2.md
+++ b/지능형SW/0613_chap1_2.md
@@ -1,6 +1,4 @@
-0613 공부한 것! 
-
-intelligence software에서
+### intelligence software에서
 
 definition of AI ,
 
@@ -19,6 +17,14 @@ agent program 4가지
   
 
 - model-reflex based agent   => 얘가 좀 complicated함
+
+  > partially observable한 문제를 해결하기 위해 internal state를 계속 유지한다 
+  >
+  > 이 agent 에서는 지금 받아들인 current state가 partially observable 하기 때문에 현재 인식된 정보(current state)와 internal state 그리고 model을 고려해 update 된 current state로 판단한다.  
+
+  * internal state : 지금 주변 환경에서 일어나는 일들을 (percept history)들을 계속 유지한다. 또한, 주변 환경의 진화, 변화와 어떠한 action에 대한 결과가 어떻게 나오는지에 대한 정보를 통해 매번 update 된다. 이것을 model 이라고도 한다. 
+
+  
 
 - goal-based agent
 
